
1.9alpha2
=========

	* Fix use of a Python 2.2 C function, replacing it with a 
	  2.1-compatible equivalent.  (Bug report and patch by Andrew
	  Eland.)

	* Make test.py automatically add the build/* directory to sys.path.
	

1.9alpha1
=========

	* Added Crypto.Cipher.AES.

	* Added the CTR mode and the variable-sized CFB mode from the
          NIST standard on feedback modes. 
	
	* Removed Diamond, HAVAL, MD5, Sapphire, SHA, and Skipjack.  MD5
	  and SHA are included with Python; the others are all of marginal
	  usefulness in the real world.

	* Renamed the module-level constants ECB, CFB, &c., to MODE_ECB,
	  MODE_CFB, as part of making the block encryption modules 
	  compliant with PEP 272.  (I'm not sure about this change;
	  if enough users complain about it, I might back it out.)
	
	* Made the hashing modules compliant with PEP 247 (not backward
   	  compatible -- the major changes are that the constructor is now 
	  MD2.new and not MD2.MD2, and the size of the digest is now 
	  given as 'digest_size', not 'digestsize'.

	* The Crypto.PublicKey package is no longer installed; the
	  interfaces are all wrong, and I have no idea what the right
	  interfaces should be.  


1.1alpha2
=========
	* Most importantly, the distribution has been broken into two
parts: exportable, and export-controlled.  The exportable part
contains all the hashing algorithms, signature-only public key
algorithms, chaffing & winnowing, random number generation, various
utility modules, and the documentation.

	The export-controlled part contains public-key encryption
algorithms such as RSA and ElGamal, and bulk encryption algorithms
like DES, IDEA, or Skipjack.  Getting this code still requires that
you go through an access control CGI script, and denies you access if
you're outside the US or Canada.

	* Added the RIPEMD hashing algorithm.  (Contributed by
Hirendra Hindocha.)

	* Implemented the recently declassified Skipjack block